stop try for java 10